# diskstat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.windows  README.md  TDD_NEXT_STEPS.txt  build-exe.ps1  diskstat.bat  diskstat.py  diskstat.py.bak  diskstat.sh  diskstat.spec  docker-build-run.ps1  files.csv  pyproject.toml  report.html
.github/workflows/: build-windows.yml  docker.yml  release.yml  tests.yml
completions/: diskstat.bash
demo/: index.html
diskstat/: __init__.py  __main__.py  cli.py  completions.py  config.py  logging_.py  renderer.py  reporter.py  scanner.py  template.html
tests/: conftest.py  test_benchmarks.py  test_compare.py  test_diskstat.py  test_diskstat.py.bak  test_property_based.py  test_render_html_interactions.py
