[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diskstat"
version = "1.2.0"
description = "Disk usage analyzer (WinDirStat-like) with interactive treemap + CSV reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Sten", email = "dev@diskstat.local"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.scripts]
diskstat = "diskstat.cli:main"

[project.urls]
Homepage = "https://github.com/stennu718/diskstat"
Repository = "https://github.com/stennu718/diskstat"

[tool.hatch.build.targets.wheel]
packages = ["diskstat"]
